# wdl-crates

./: Cargo.toml
.github/workflows/: labels.yml
wdl/: Cargo.toml
wdl-cli/: Cargo.toml
wdl-cli/src/: analysis.rs  eval.rs  input.rs  lib.rs
wdl-cli/src/analysis/: results.rs
wdl-cli/src/input/: file.rs
wdl-engine/src/: inputs.rs  outputs.rs  value.rs
wdl/src/: cli.txt  command.rs  lib.rs
wdl/src/command/: check.rs  run.rs  validate.rs
