[package]
name = "wdl-cli"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wdl-analysis = { path = "../wdl-analysis" }
wdl-ast = { path = "../wdl-ast" }
wdl-engine = { path = "../wdl-engine" }
wdl-lint = { path = "../wdl-lint" }

anyhow.workspace = true
codespan-reporting.workspace = true
colored.workspace = true
indexmap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
url.workspace = true

[lints]
workspace = true
